<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ElPinjo</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_measure">Measure</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_wifi_signal">DisplayWifiSignalActivity</string>
    <string name="title_activity_measure_wifi_signal">MeasureWifiSignalActivity</string>
    <string name="title_registration">Register</string>
    <string name="button_submit">Submit measurement</string>
    <string name="measurement_text">Go around the room, stop at various places and click measure. Watch your step, you are measuring at your own responsibility!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_regions">Regions</string>
</resources>